After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 84396 - clear background causes inconsistency
clear background causes inconsistency
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Main System
git master
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2002-06-06 18:29 UTC by Andreas J. Guelzow
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Andreas J. Guelzow 2002-06-06 18:29:15 UTC
This may be an html export bug but I suspect some problem in the main system:

new gnumeric
B2  =   1
C2  =   2
set background of B2 to red.
export to HTML 4.0   
         ----------> check the file an observe that the 1 is on red background

clear background of B2
         ----------> the sheet now shows B2 to have a white background
export to HTML 4.0   
         ----------> check the file an observe that the 1 is still on red
background  <BUG!!!>

set background of B2 to white
         ----------> check the file an observe that the 1 is on clear
background (Shouldn't the background be white ??, this may also be a bug.)
Comment 1 Andreas J. Guelzow 2002-06-25 21:21:00 UTC
I just noticed that this only happens when we use the button on the
toolbar. If we use the cell format dialog there is no probleem.
Comment 2 Andreas J. Guelzow 2002-06-25 21:57:46 UTC
fixed in cvs head